# pikiss-gui

./: .gitignore  LICENSE  PKGBUILD  README.md  build.sh  meson.build  meson_options.txt  post_install.py  post_install.sh
data/: getapps.sh  pikiss-gui.desktop
data/categories/Emulators/: README.md
src/: Application.vala
vapi/: config.vapi
